--- a/frontend_files/style.css
+++ b/frontend_files/style.css
@@ -158,6 +158,12 @@ img {
   align-items: center;
 }
 
+button {
+  width: 50%;
+  font-size: 1em;
+  height: 10%;
+}
+
 .display-data-container {
   flex: 1;
   display: flex;
@@ -165,15 +171,20 @@ img {
   justify-content: space-around;
 }
 
-.display-wrap-container {
+.data-wrap-container {
   flex: 5 1 auto;
   display: flex;
   flex-wrap: wrap;
-  align-content: space-around;
+  align-content: stretch;
 }
 
 .data-item {
-  max-width: fit-content;
+  flex: 1 1 auto;
+  min-width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .display-news-container {
@@ -182,9 +193,12 @@ img {
   justify-content: center;
   align-items: center;
 }
+
 .display-news-container > div {
   flex: 1;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 @media all and (max-width: 1000px) { /* on thinner displays, put sidebar above main content (weird layout-wise, but better than an ultra-thin sidebar). */
